--- a/src/component/CardGrid.css
+++ b/src/component/CardGrid.css
@@ -29,7 +29,7 @@ body {
 .trending-title {
   font-size: 2.4rem;
   font-weight: 800;
-  background: var(--primary-gradient);
+  background: linear-gradient(135deg, #ff7e5f, #feb47b);
   color: transparent;
   background-clip: text;
   -webkit-background-clip: text;
@@ -67,6 +67,10 @@ body {
   }
 }
 
+.custom {
+  text-decoration: none;
+}
+
 .card {
   position: relative;
   background-size: cover;
@@ -96,20 +100,18 @@ body {
 .card-content {
   position: relative;
   z-index: 2;
+  height: 100%;
   padding: 1rem;
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
 }
 
 .card-title {
   font-size: 1.25rem;
   font-weight: bold;
-  margin: 0 0 0.4rem;
-}
-
-.card-copy {
-  font-size: 0.95rem;
-  font-style: italic;
-  margin-bottom: 1rem;
+  margin: 0 0 0.8rem;
 }
 
 .card-actions {
